# django-simple-deploy

./: .gitignore  .python-version  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  conftest.py  mkdocs.yml  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: documenting-a-test-run.md  support_new_platform.yml
.github/workflows/: test.yml
developer_resources/: README.md  git_diff_unified_0_output.txt  git_diff_unified_0_output_newline_end.txt  heroku_apps_create.json  platform_create_output.txt  platform_project_info_output.txt  update_sample_project_reqs.py
docs/: README.md  azure_deployments.md  cli_args.md  code_of_conduct.md  contributing.md  creating_release.md  development_process.md  heroku_deployments.md  index.md  integration_tests.md  make_headers.py  platformsh_deployments.md  requirements.txt  roadmap.md  scope_purpose.md  supporting_platforms.md  testing.md  unit_tests.md
docs/contributing/: architecture_notes.md  coding_guide.md  development_environment.md  index.md  own_account.md  parking_lot.md  test_run.md  testing_on_your_own_account.md
docs/design_docs/: rationale.md  strengths_limitations.md  use_cases.md
docs/fly.io/: quick_start.md
docs/fly_io/: quick_start.md
docs/general_documentation/: choosing_platform.md  cli_reference.md
docs/heroku/: quick_start.md
docs/integration_tests/: index.md  running_integration_tests.md
docs/maintaining/: adr.md  index.md  managing_releases.md  merging_prs.md  new_release.md  updating_docs.md
docs/platform.sh/: quick_start.md
docs/platform_sh/: quick_start.md
docs/plugins/: index.md
docs/quick_starts/: index.md  quick_start_flyio.md  quick_start_heroku.md  quick_start_platformsh.md
docs/roadmap/: index.md  reaching_one_point_o.md
docs/testing/: e2e_tests.md  index.md  integration_tests.md  unit_tests.md
docs/unit_tests/: index.md  running_unit_tests.md  understanding_unit_tests.md
integration_tests/: README.md  __init__.py  autoconfigure_deploy_test.sh  build_dev_env.sh  conftest.py  test_azure_deployment.sh  test_deploy_process.sh  test_deployed_app_functionality.py  test_flyio_deployment.sh  test_heroku_deployment.sh  test_platformsh_deployment.sh
integration_tests/utils/: build_dev_env.py  it_helper_functions.py  manage_sample_project.py
integration_tests_new/: test_azure_deployment.sh  test_deploy_process.sh  test_heroku_deployment.sh
old_docs/: README.md  cli_args.md  contributing.md  creating_release.md  heroku_deployments.md  integration_tests.md  make_headers.py  platformsh_deployments.md  unit_tests.md
sample_project/: README.md
sample_project/blog_project/: .gitignore  Pipfile  manage.py  requirements.in  requirements.txt  reset_project.py  test_deployed_app_functionality.py
sample_project/blog_project/blog/: asgi.py  settings.py  urls.py  wsgi.py
sample_project/blog_project/blogs/: admin.py  apps.py  forms.py  models.py  urls.py
sample_project/blog_project/blogs/migrations/: 0001_initial.py  0002_blog_public_blogpost_public.py
sample_project/blog_project/users/: urls.py
sample_project/blog_project_nested/: .gitignore  test_deployed_app_functionality.py
sample_project/blog_project_nested/blog/blog/: asgi.py  settings.py  urls.py  wsgi.py
sample_project/blog_project_nested/blog/blogs/: models.py  views.py
sample_project/blog_project_nested/blog/users/: urls.py  views.py
sample_project_minimal/: README.md
sample_project_minimal/mysite/: .gitignore  requirements.txt
sample_project_minimal/mysite/mysite/: settings.py
simple_deploy/: __init__.py  apps.py  hookspecs.py  plugins.py
simple_deploy/management/commands/: cli.py  deploy.py  deploy_messages.py  sd_messages.py  simple_deploy.py  utils.py
simple_deploy/management/commands/fly_io/: deploy.py  deploy_messages.py  fly_io.py  platform_deployer.py
simple_deploy/templates/: deployment_summary.html  dockerfile_flyio  fly.toml  flyio_settings.py  platform.app.yaml  platformsh_settings.py  routes.yaml  services.yaml
tests/e2e_tests/: conftest.py  test_platform.py
tests/e2e_tests/utils/: build_dev_env.py  it_helper_functions.py  manage_sample_project.py
tests/integration_tests/: conftest.py  hookspecs.py  test_plugins.py
tests/integration_tests/platform_agnostic_tests/: test_found_existing_file.py  test_generic_behaviors.py  test_git_status_checks.py  test_invalid_cli_commands.py  test_project_inspection.py  test_valid_cli_commands.py
tests/integration_tests/utils/: it_helper_functions.py  manage_sample_project.py
tests/unit_tests/: conftest.py  test_deploy_messages.py  test_git_status_utils.py  test_utils.py
tests/unit_tests/platform_agnostic_tests/: test_project_inspection.py
tests/unit_tests/reference_files/: Pipfile  requirements.txt
tests/unit_tests_real/: README.md  conftest.py  test_git_status_utils.py
tests/unit_tests_real/reference_files/: pyproject_deploy_group_awesome_pkg.toml
tests/utils/: plugin_finders.py
unit_tests/: call_sd_heroku.sh  call_sd_no_platform.sh  call_simple_deploy.sh  conftest.py  modify_allowed_hosts.sh  setup_project.sh  test_default_heroku_config.py  test_heroku_config.py  test_platformsh_config.py  test_settings.py
unit_tests/platform_agnostic_tests/: __init__.py  conftest.py  test_generic_behaviors.py  test_git_status_checks.py  test_invalid_cli_commands.py  test_valid_cli_commands.py
unit_tests/utils/: call_git_log.sh  call_git_status.sh  call_simple_deploy.sh  call_simple_deploy_invalid.sh  commit_test_project.sh  manage_sample_project.py  reset_test_project.sh  setup_minimal_project.sh  setup_project.sh  ut_helper_functions.py
unit_tests_real/: conftest.py  test_git_status_utils.py  test_utils.py
unit_tests_real/resources/: pyproject_toml_empty_deploy_group.toml  requirements.txt
(+71 files in other folders)
