[metadata]
name = django-simple-deploy
version = 0.4.1
description = A management command that auto-configures a Django project for deployment.
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/ehmatthes/django-simple-deploy
author = Eric Matthes
author_email = ehmatthes@gmail.com
license = BSD
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = simple_deploy, simple_deploy/management, simple_deploy/management/commands, simple_deploy/management/commands/utils, simple_deploy/templates
python_requires = >=3.8
install_requires =
    Django >=  3.0