[metadata]
name = django-simple-deploy
version = 0.5.14
description = A management command that auto-configures a Django project for deployment.
long_description = file: README.md
long_description_content_type=text/markdown
project_urls =
    Documentation = https://django-simple-deploy.readthedocs.io/en/latest/
    GitHub = https://github.com/ehmatthes/django-simple-deploy
    Changelog = https://github.com/ehmatthes/django-simple-deploy/blob/main/CHANGELOG.md

author = Eric Matthes
author_email = ehmatthes@gmail.com
license = BSD
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = simple_deploy
python_requires = >=3.8
install_requires =
    Django >=  3.0
    toml >= 0.10.2